--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,20 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "akari"
-version = "0.1.0"
-description = "AKARI: an experimental AI control-plane kernel and userland."
+version = "0.0.1"
+description = "AKARI – an AI control-plane kernel and runtime orchestration layer."
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
-  { name = "Your Name", email = "you@example.com" }
+  { name = "Minh Quach", email = "minhquach8@gmail.com" },
 ]
 license = { text = "MIT" }
-
-# Tạm thời chưa khai báo dependencies – sẽ thêm dần ở các version sau.
-dependencies = []
 
 [project.urls]
 Homepage = "https://example.com/akari"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/akari"]
+[tool.setuptools.packages.find]
+where = ["src"]
