--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ authors = [
 ]
 license = { text = "MIT" }
 
+dependencies = [
+  "scikit-learn>=1.4,<2.0",
+]
+
 [project.urls]
 Homepage = "https://example.com/akari"
 
