--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ license = { text = "MIT" }
 
 dependencies = [
   "scikit-learn>=1.4,<2.0",
+  "torch",
+  "torchvision",
+  "transformers",
+  "pyyaml",
 ]
 
 [project.urls]
